.Net 8 son revize

--- a/CoreArchV2.Api/appsettings.json
+++ b/CoreArchV2.Api/appsettings.json
@@ -24,6 +24,6 @@
 
 
     //Licence Db
-    "LicenceDbConnection": "Server=.;Database=LicenceKeyDb;User Id=sa;Password=Basaran123.+-_526.;Trusted_Connection=False;MultipleActiveResultSets=true"
+    "LicenceDbConnection": "Server=.;Database=LicenceKeyDb;User Id=sa;Password=Basaran123.+-_526.;Trusted_Connection=False;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
   }
 }
