--- a/CoreArchV2.Hangfire/appsettings.json
+++ b/CoreArchV2.Hangfire/appsettings.json
@@ -17,7 +17,7 @@
   },
   "ArventoSetting": {
     "UserName": "basaranileri16",
-    "Password": "p73to42"
+    "Password": "P.BsrnN73to42"
   },
   "FirmSetting": {
     "DisplayName": "Başaran İleri Teknoloji",
@@ -36,6 +36,6 @@
     "DevConnection": "Server=.;Database=TrackCore;User Id=sa;Password=Basaran123.+-_526.;Trusted_Connection=False;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
 
     //Test
-    //"DevConnection": "Server=.;Database=TrackCoreTest;User Id=sa;Password=Basaran123.+-_526.;Trusted_Connection=False;MultipleActiveResultSets=true"
+    //"DevConnection": "Server=.;Database=TrackCoreTest;User Id=sa;Password=Basaran123.+-_526.;Trusted_Connection=False;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
   }
 }
