--- a/CoreArchV2.Web/appsettings.Development.json
+++ b/CoreArchV2.Web/appsettings.Development.json
@@ -17,7 +17,7 @@
   },
   "ArventoSetting": {
     "userName": "basaranileri16",
-    "password": "p73to42"
+    "password": "P.BsrnN73to42"
   },
   "FirmSetting": {
     "DisplayName": "Başaran İleri Teknoloji",
