--- a/CoreArchV2.Web/appsettings.json
+++ b/CoreArchV2.Web/appsettings.json
@@ -1,12 +1,11 @@
 ﻿{
   "Logging": {
-    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Environment": "Development",
   "AllowedHosts": "*",
   "MailSetting": {
     "MethodNo": "1",
@@ -44,12 +43,13 @@
   },
   "ConnectionStrings": {
     //Prod
-    "DevConnection": "Server=.;Database=TrackCore;User Id=sa;Password=Basaran123.+-_526.;Trusted_Connection=False;MultipleActiveResultSets=true",
+    "DevConnection": "Server=.;Database=TrackCore;User Id=sa;Password=Basaran123.+-_526.;TrustServerCertificate=True;MultipleActiveResultSets=true",
+
 
     //Test
-    //"DevConnection": "Server=.;Database=TrackCoreTest;User Id=sa;Password=Basaran123.+-_526.;Trusted_Connection=False;MultipleActiveResultSets=true"
+    //"DevConnection": "Server=.;Database=TrackCore2;User Id=sa;Password=Basaran123.+-_526.;TrustServerCertificate=True;MultipleActiveResultSets=true",
 
     //Licence Db-Sadece anasunucuda bilgileri olur
-    "LicenceDbConnection": "Server=.;Database=;User Id=sa;Password=;Trusted_Connection=False;MultipleActiveResultSets=true"
+    "LicenceDbConnection": "Server=.;Database=;User Id=sa;Password=;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
