--- a/CoreArchV2.Web/Properties/launchSettings.json
+++ b/CoreArchV2.Web/Properties/launchSettings.json
@@ -9,27 +9,20 @@
     }
   },
   "profiles": {
-    "http": {
+    "CoreArchV2.Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5003",
+      "launchBrowser": false, // 🔴 Tarayıcıyı otomatik açmasın
+      "applicationUrl": "https://localhost:7095;http://localhost:5010",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7090;http://localhost:5003",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DOTNET_WATCH_AUTO_RESTART": "0", // 🔴 Otomatik restart kapalı
+        "DOTNET_HOTRELOAD": "0" // 🔴 Hot reload tamamen devre dışı
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
