--- a/CoreArchV2.Data/CoreArchV2.Data.csproj
+++ b/CoreArchV2.Data/CoreArchV2.Data.csproj
@@ -1,18 +1,23 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>disable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>disable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.5.1" />
-  </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\CoreArchV2.Core\CoreArchV2.Core.csproj" />
-    <ProjectReference Include="..\CoreArchV2.Utilies\CoreArchV2.Utilies.csproj" />
-  </ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\CoreArchV2.Core\CoreArchV2.Core.csproj" />
+		<ProjectReference Include="..\CoreArchV2.Utilies\CoreArchV2.Utilies.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.21" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.21" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.21" />
+	</ItemGroup>
 
 </Project>
