--- a/CoreArchV2.Hangfire/CoreArchV2.Hangfire.csproj
+++ b/CoreArchV2.Hangfire/CoreArchV2.Hangfire.csproj
@@ -8,6 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.8.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.*">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
