--- a/CoreArchV2.Web/Properties/launchSettings.json
+++ b/CoreArchV2.Web/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "CoreArchV2.Web": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false, // 🔴 Tarayıcıyı otomatik açmasın
+      "launchBrowser": true, // 🔴 Tarayıcıyı otomatik açmasın
       "applicationUrl": "https://localhost:7095;http://localhost:5010",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
@@ -22,7 +22,7 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
