--- a/CoreArchV2.Web/appsettings.Development.json
+++ b/CoreArchV2.Web/appsettings.Development.json
@@ -43,11 +43,10 @@
   },
   "ConnectionStrings": {
     //Prod
-    "DevConnection": "Server=.;Database=TrackCore;User Id=sa;Password=Basaran123.+-_526.;TrustServerCertificate=True;MultipleActiveResultSets=true",
-
+    //"DevConnection": "Server=.;Database=TrackCore;User Id=sa;Password=Basaran123.+-_526.;TrustServerCertificate=True;MultipleActiveResultSets=true",
 
     //Test
-    //"DevConnection": "Server=.;Database=TrackCore2;User Id=sa;Password=Basaran123.+-_526.;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "DevConnection": "Server=.;Database=TrackCore_Test;User Id=sa;Password=Basaran123.+-_526.;TrustServerCertificate=True;MultipleActiveResultSets=true",
 
     //Licence Db-Sadece anasunucuda bilgileri olur
     "LicenceDbConnection": "Server=.;Database=;User Id=sa;Password=;Trusted_Connection=True;MultipleActiveResultSets=true"
